Fix alignment on psalm verse numbers

--- a/app/src/global.scss
+++ b/app/src/global.scss
@@ -609,3 +609,7 @@ pre {
   --ldf-drop-font-family: var(--ldf-font-face);
   --ldf-drop-float: none;
 }
+
+.psalm-set sup {
+  top: 0.5em;
+}
